--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Вход</title>
-<link rel="stylesheet" href="css/log_in.css">
+<link rel="stylesheet" href="stylesheets/log_in.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="../data/js/log_in.js"></script>
 </head>
@@ -22,7 +22,7 @@
                     <form action="" method="POST">
                         <input id="login" placeholder=" Логин" type="text" required>
                         <input id="password" placeholder=" Пароль" type="password" required>
-                        <a href="view/log_up.html" id="href_log_up">Регистрация</a>
+                        <a href="view/log_up/index.html" id="href_log_up">Регистрация</a>
                         <button type="submit" id="button_log_in">Вход</button>
                     </form>
                     <div class="copyright">
