--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -19,10 +19,10 @@
                         <span class="char_M">M</span>
                         <span class="char_ate">ate</span>
                     </div>
-                    <form action="" method="POST">
+                    <form>
                         <input id="login" placeholder=" Логин" type="text" required>
                         <input id="password" placeholder=" Пароль" type="password" required>
-                        <a href="view/log_up/index.html" id="href_log_up">Регистрация</a>
+                        <a href="view/log_up/" id="href_log_up">Регистрация</a>
                         <button type="submit" id="button_log_in">Вход</button>
                     </form>
                     <div class="copyright">
