--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -19,7 +19,7 @@
                         <span class="char_M">M</span>
                         <span class="char_ate">ate</span>
                     </div>
-                    <form>
+                    <form onsubmit="return false;">
                         <input id="login" placeholder=" Логин" type="text" required>
                         <input id="password" placeholder=" Пароль" type="password" required>
                         <a href="view/log_up/" id="href_log_up">Регистрация</a>
