--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -5,6 +5,7 @@
   <title>Вход</title>
 <link rel="stylesheet" href="stylesheets/log_in.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="../data/js/log_in.js"></script>
 </head>
 
