--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -23,7 +23,7 @@
                     <form onsubmit="return false;">
                         <input id="login" placeholder=" Логин" type="text" required>
                         <input id="password" placeholder=" Пароль" type="password" required>
-                        <a href="view/log_up/" id="href_log_up">Регистрация</a>
+                        <a href="./www_data/data/view/log_up/" id="href_log_up">Регистрация</a>
                         <button type="submit" id="button_log_in">Вход</button>
                     </form>
                     <div class="copyright">
