--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -5,8 +5,8 @@
   <title>Вход</title>
 <link rel="stylesheet" href="./www_data/data/stylesheets/log_in.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="../data/js/jquery.cookie.js"></script>
-<script src="../data/js/log_in.js"></script>
+<script type="text/javascript" src="./www_data/data/js/jquery.cookie.js"></script>
+<script src="./www_data/data/js/log_in.js"></script>
 </head>
 
 <body>
