--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -25,6 +25,14 @@
                         <input id="password" placeholder=" Пароль" type="password" required>
                         <a href="./www_data/data/view/log_up/" id="href_log_up">Регистрация</a>
                         <button type="submit" id="button_log_in">Вход</button>
+                        
+                        <a class="myLinkModal" href="#">Восстановить пароль</a>
+                        <div id="myModal">
+                        <p>Контент</p>
+                        <span id="myModal__close" class="close">ₓ</span>
+                        </div>
+                        <div id="myOverlay"></div>
+
                     </form>
                     <div class="copyright">
                         <span>©TeamMates</span>
