--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -28,7 +28,9 @@
                         
                         <a class="myLinkModal" href="#">Восстановить пароль</a>
                         <div id="myModal">
-                        <p>Контент</p>
+                        <p>Введите логин</p>
+                        <input id="input_reset_password">
+                        <button id="button_reset_password">Восстановить</button>
                         <span id="myModal__close" class="close">ₓ</span>
                         </div>
                         <div id="myOverlay"></div>
