--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -21,8 +21,8 @@
                         <span class="char_ate">ate</span>
                     </div>
                     <form onsubmit="return false;">
-                        <input id="login" placeholder=" Логин" type="text" required>
-                        <input id="password" placeholder=" Пароль" type="password" required>
+                        <input id="login" placeholder=" Логин" type="text" >
+                        <input id="password" placeholder=" Пароль" type="password" >
                         <a href="./www_data/data/view/log_up/" id="href_log_up">Регистрация</a>
                         <button type="submit" id="button_log_in">Вход</button>
                         
