--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Вход</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 <link rel="stylesheet" href="./www_data/data/stylesheets/log_in.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="./www_data/data/js/jquery.cookie.js"></script>
 <script src="./www_data/data/js/log_in.js"></script>
+
+<!--
+<link rel="stylesheet" href="./stylesheets/log_in.css">
+<script type="text/javascript" src="./js/jquery.cookie.js"></script>
+<script src="./js/log_in.js"></script>
+-->
+
 </head>
 
 <body>
@@ -23,7 +31,8 @@
                     <form onsubmit="return false;">
                         <input id="login" placeholder=" Логин" type="text" >
                         <input id="password" placeholder=" Пароль" type="password" >
-                        <a href="./www_data/data/view/log_up/" id="href_log_up">Регистрация</a>
+                       <!-- <a href="./www_data/data/view/log_up/" id="href_log_up">Регистрация</a> -->
+                        <a href="http://127.0.0.1:5500/www_data/data/view/log_up/" id="href_log_up">Регистрация</a>
                         <button type="submit" id="button_log_in">Вход</button>
                         
                         <a class="myLinkModal" href="#">Восстановить пароль</a>
