--- a/www_data/data/index.html
+++ b/www_data/data/index.html
@@ -32,7 +32,7 @@
                         <input id="login" placeholder=" Логин" type="text" >
                         <input id="password" placeholder=" Пароль" type="password" >
                        <!-- <a href="./www_data/data/view/log_up/" id="href_log_up">Регистрация</a> -->
-                        <a href="./data/view/log_up/" id="href_log_up">Регистрация</a>
+                        <a href="./www_data/data/view/log_up/" id="href_log_up">Регистрация</a>
                         <button type="submit" id="button_log_in">Вход</button>
                         
                         <a class="myLinkModal" href="#">Восстановить пароль</a>
